--- a/try/index.html
+++ b/try/index.html
@@ -11,9 +11,9 @@
     <h1>Record Verification</h1>
     <input type="text" id="registrationNumber" placeholder="Enter Registration Number">
     <button onclick="verifyRecord()">Verify</button>
-    <div id="recordsContainer"> <!-- This div wraps the verificationResult div -->
-      <div id="verificationResult"></div> <!-- The div to display fetched records -->
-    </div>
+    <div id="verificationResult"></div> <!-- This div will display the fetched records -->
+
+
   </div>
   <script src="script.js"></script>
 </body>
