--- a/main/index.html
+++ b/main/index.html
@@ -12,7 +12,7 @@
 
 <div class="container">
     <div >
-        <img src="logo.jpg" width="150" height="100"  alt="Restaurant Logo">
+        <img src="logo.png" width="150" height="100"  alt="Restaurant Logo">
     </div>
     <div>
         <h1 class="heading">NexaCode Innovations</h1>
