--- a/main/index.html
+++ b/main/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NexaCode Innovations</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
 
 <div class="container">
     <div >
-        <img src="logo.png" width="150" height="100"  alt="Restaurant Logo">
+        <img src="assets/logo.png" width="150" height="100"  alt="Restaurant Logo">
     </div>
     <div>
         <h1 class="heading">NexaCode Innovations</h1>
