--- a/trial/index.html
+++ b/trial/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" type="image/png" href="" />
+  <link rel="shortcut icon" type="image/png" href="assets/main_logo.png" />
 
 
   <title>
