--- a/trial/index.html
+++ b/trial/index.html
@@ -15,7 +15,7 @@
   <meta name="description" content="Add small description of yourslef.">
 
   <meta name="keywords" content="Put your name, skills and some coding keywords" />
-  <link rel="stylesheet" href="index.css" />
+  <link rel="stylesheet" href="styles/style.css" />
 </head>
 
 <body>
@@ -253,7 +253,7 @@
   <a href="#top" class="back-to-top" title="Back to Top">
     <img src="./images/arrow-up.svg" alt="Back to Top" class="back-to-top__image"/>
   </a>
-  <script src="./index.js"></script>
+  <script src="scripts/script.js"></script>
 </body>
 
 </html>
