--- a/trial/index.html
+++ b/trial/index.html
@@ -51,7 +51,25 @@
 
   <main role="main">
 
+<section class="about" id="about">
+      <div class="row">
+        <h2>About Us</h2>
+        <div class="about__content">
+          <div class="about__text">
+            <!-- Replace the below paragraph with info about yourself -->
+            <p>
+              Welcome to Nexa Code Innovations, where internships meet innovation. We're passionate about technology's potential to transform businesses and the world. Our internship program offers hands-on learning through live projects, empowering students with practical skills for success in the tech industry. Join us and be part of shaping the future of technology.
+            </p>
+          </div>
 
+          <div class="about__photo-container">
+            <!-- Add a nice photo of yourself -->
+            <img class="about__photo" src="assets/full_logo.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
+    
     <section class="work" id="work">
       <div class="row">
         <h2>My Work</h2>
@@ -164,29 +182,7 @@
 
     <!-- ***** About ***** -->
 
-    <section class="about" id="about">
-      <div class="row">
-        <h2>About Me</h2>
-        <div class="about__content">
-          <div class="about__text">
-            <!-- Replace the below paragraph with info about yourself -->
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos id
-              nostrum illo harum blanditiis, tenetur eum suscipit cupiditate
-              in vel, ex quam quidem quos mollitia labore aut sunt eius
-              ratione molestiae fuga veniam facere similique voluptate.
-            </p>
-            <!-- Provide a link to your resume -->
-            <a href="#" class="btn">My Resume</a>
-          </div>
-
-          <div class="about__photo-container">
-            <!-- Add a nice photo of yourself -->
-            <img class="about__photo" src="./images/syed-ali-hussnain.jpg" alt="" />
-          </div>
-        </div>
-      </div>
-    </section>
+    
   </main>
 
   <!-- ***** Contact ***** -->
