--- a/trial/index.html
+++ b/trial/index.html
@@ -64,7 +64,7 @@
 
           <div class="about__photo-container">
             <!-- Add a nice photo of yourself -->
-            <img class="about__photo" src="assets/full_logo.png" alt="" />
+            <img class="about__photo" src="assets/main_logo.png" alt="" />
           </div>
         </div>
       </div>
